--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 02 22:44:17 IST 2020
-sdk.dir=C\:\\Users\\ankit\\AppData\\Local\\Android\\Sdk
+#Mon Dec 21 15:34:01 IST 2020
+sdk.dir=C\:\\Users\\Dell\\AppData\\Local\\Android\\Sdk
