--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.google.mlkit.samples.vision.digitalink">
 
+<!--    uses-sdk-->
+<!--    android:minSdkVersion="8"-->
+<!--    android:targetSdkVersion="17" />-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- For downloading -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
 
 
     <application
@@ -44,15 +47,6 @@
             android:name=".DigitalInkMainActivity"
             android:label="INK"
             android:exported="true"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".HomeScreen">
-        </activity>
-
-        <activity
-            android:name=".MainScreen"
-            android:label="INK"
-            android:exported="true"
-            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".HomeScreen">
         </activity>
