--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <!--suppress ALL -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.google.mlkit.samples.vision.digitalink">
+    package="com.smartboard.samples.sbfinal">
 
 <!--    uses-sdk-->
 <!--    android:minSdkVersion="8"-->
@@ -23,7 +23,7 @@
         tools:replace="android:label"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
 
-        <activity android:name=".HomeScreen"
+        <activity android:name="com.smartboard.samples.sbfinal.HomeScreen"
             android:screenOrientation="portrait">
 
             <intent-filter>
@@ -33,22 +33,22 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".SignIn"
+        <activity android:name="com.smartboard.samples.sbfinal.SignIn"
             android:screenOrientation="portrait"
 
             ></activity>
 
-        <activity android:name=".SignUp"
+        <activity android:name="com.smartboard.samples.sbfinal.SignUp"
             android:screenOrientation="portrait"
 
             ></activity>
 
         <activity
-            android:name=".DigitalInkMainActivity"
+            android:name="com.smartboard.samples.sbfinal.DigitalInkMainActivity"
             android:label="INK"
             android:exported="true"
             android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".HomeScreen">
+            android:parentActivityName="com.smartboard.samples.sbfinal.HomeScreen">
         </activity>
 
         <meta-data
