--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-// Top-level build file where you can add configuration options com.google.mlkit.samples.vision.digitalink.common to all sub-projects/modules.
+// Top-level build file where you can add configuration options com.smartboard.samples.sbfinal.common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
     repositories {
