--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 14 11:33:36 IST 2021
-sdk.dir=C\:\\Users\\anike\\AppData\\Local\\Android\\Sdk
+#Mon Apr 19 21:00:54 IST 2021
+sdk.dir=C\:\\Users\\ankit\\AppData\\Local\\Android\\Sdk
