--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'com.android.support.constraint:constraint-layout:2.0.1'
+    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
     annotationProcessor "com.google.auto.value:auto-value:1.6.3"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.multidex:multidex:2.0.1'
@@ -50,8 +53,9 @@ dependencies {
     implementation 'com.google.mlkit:digital-ink-recognition:16.1.0'
     implementation 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
     implementation 'com.muddzdev:regret:1.3.1'
-    implementation platform('com.google.firebase:firebase-bom:27.0.0')
+    implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.firebase:firebase-analytics'
+
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
@@ -64,6 +68,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'com.google.truth:truth:1.0.1'
-
 
 }
